# osc-lib

./: .coveragerc  .git-ignore-blame-revs  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  .zuul.yaml  HACKING.rst  README.rst  lower-constraints.txt  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: Makefile  requirements.txt
doc/ext/: apidoc.py
doc/source/: conf.py  index.rst  transition.rst
doc/source/contributor/: index.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst  transition.rst
openstackclient/api/: api.py  auth.py
openstackclient/tests/: test_shell.py
osc_lib/: __init__.py  clientmanager.py  exceptions.py  i18n.py  logs.py  shell.py  utils.py  version.py
osc_lib/api/: api.py  auth.py  utils.py
osc_lib/cli/: client_config.py  format_columns.py  identity.py  pagination.py  parseractions.py
osc_lib/command/: command.py  commandmanager.py  timing.py
osc_lib/test/: base.py  fakes.py  utils.py
osc_lib/tests/: fakes.py  test_clientmanager.py  test_logs.py  test_shell.py  test_utils.py  utils.py
osc_lib/tests/api/: fakes.py  test_api.py  test_utils.py
osc_lib/tests/cli/: test_client_config.py  test_format_columns.py  test_identity.py  test_parseractions.py
osc_lib/tests/command/: test_command.py  test_commandmanager.py  test_timing.py
osc_lib/tests/utils/: __init__.py  test_columns.py  test_tags.py  test_utils.py
osc_lib/utils/: __init__.py  columns.py  tags.py
releasenotes/notes/: 1.0-summary-47dcce446d6a512b.yaml  add-KeyValueAppendAction-class-f830e71152d6b91e.yaml  add-MultiKeyValueCommaAction-class-01dd254a287d70d2.yaml  add-osc_lib-test-package-645aa7da2a82c2a1.yaml  add-size-column-5424c40af74688df.yaml  add_sdk_utils-d0c338eba682f2c8.yaml  arg-precedence-1ba9fd6929650830.yaml  auth-type-none-d96760912605f822.yaml  bug-1558690-1528b637f2c0a449.yaml  bug-1630822-mask-password-on-debug-20dcdf1c54e84fa1.yaml  bug-2004898-686577a07e791051.yaml  bug-2006480-436489d39643e76c.yaml  deprecate-BaseAPI-09abd3cb955c2bb6.yaml  deprecate-clientcache-38c8c9fd4ca6dcdf.yaml  deprecate-version-module-96e0b7bd1414b2df.yaml  deprecated-legacy-client-helpers-53dde79bd6769d2d.yaml  direct-openstacksdk-535a179f3c645cc0.yaml  drop-py2-support-60c93244107d5778.yaml  drop-python-310-c7e3201cb6d825fb.yaml  drop-python-38-39-6a1b5f805cae0be7.yaml  env-default-e8f2c60f1295d15f.yaml  find-project-203bf867619c557e.yaml  keystone-to-keystone-9b2e55b051775322.yaml  none-auth-cli-48ab0e48d4852941.yaml  os-profile-as-environment-variable-a5e232e9ca7c5171.yaml  remove-babel-50abc5b548455bb2.yaml  remove-group-subclass-82134e6915c7c782.yaml  remove-support-for-legacy-formatters-1240317d801b4336.yaml  save-results-4473cb5731c0c763.yaml  shell-argv-decode-cdc13dc0c4ec07af.yaml
releasenotes/source/: conf.py  index.rst
