[metadata]
name = osc-lib
summary = OpenStackClient Library
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
url = https://docs.openstack.org/osc-lib/latest/
project_urls =
    Bug Tracker = https://storyboard.openstack.org/#!/project/openstack/osc-lib
    Documentation = https://docs.openstack.org/osc-lib/latest/
    Source Code = https://opendev.org/openstack/osc-lib/
python_requires = >=3.6
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[files]
packages =
    osc_lib
